--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Esempio Workflow
+name: Esempio workflow
 
 on: [push]
 
@@ -6,7 +6,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    -uses: action/checkpout@v2
-    -name: RUn a one-line script
+    - uses: actions/checkout@v2
+    - name: Run a one-line script
       run: echo Hello, World!
-  
